--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,11 @@
   margin: 0 auto;
 }
 
+.fahren {
+  text-decoration: none;
+  color: #fff;
+}
+
 .today-temp {
   font-family: "Bungee Shade", cursive;
   font-size: 50px;
