added and styled github link

--- a/src/style.css
+++ b/src/style.css
@@ -94,3 +94,9 @@ i {
   padding: 1px 0px;
   font-size: 15px;
 }
+
+.sourcecode {
+  text-align: center;
+  font-family: "Comfortaa", cursive;
+  font-size: 10px;
+}
