--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,17 @@
   text-align: right;
 }
 
+.description {
+  font-family: "Bungee Shade", cursive;
+  font-size: 20px;
+  color: #fff;
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff,
+    0 0 42px rgb(255, 0, 204), 0 0 82px rgb(255, 0, 204),
+    0 0 92px rgb(255, 0, 204), 0 0 102px rgb(255, 0, 204),
+    0 0 151px rgb(255, 0, 204);
+  text-align: right;
+}
+
 .location {
   font-family: "Bungee Shade", cursive;
   font-size: 35px;
@@ -51,6 +62,13 @@
   border-radius: 10px;
   background: #ffffff4b;
   padding: 20px 2px;
+}
+
+.col:hover {
+  cursor: pointer;
+  color: #07337f;
+  background: #ffffff8f;
+  transition: all 300ms ease-in-out;
 }
 
 .date-time {
